libs/@local/hashql/ast/tests/ui/lower/special-form-expander/type-tuple-has-type.jsonc
//@ run: fail
//@ description: tuple type expression that has a type annotation is invalid
[
  "::kernel::special_form::type",
  "x",
  {
    "#tuple": ["Int"],
    "#type": "(Int)"
    //~^ ERROR Remove this type annotation
  },
  "x"
]
